# 2025-hands-on-samurai

./: .gitignore  _toc.yml  index.md  myst.yml  package-lock.json  package.json  readme.md
.github/workflows/: deploy.yml
conda/: environment.yml
euler/: CMakeLists.txt  hllc.hpp  main.cpp  main_2d.cpp  main_double_mach_reflection.cpp  main_sedov_blast.cpp  main_sod_2d.cpp  pixi.toml
euler/euler/: config.hpp  eos.hpp  prediction.hpp  schemes.hpp  utils.hpp  variables.hpp
euler/euler/init/: cases.hpp  double_mach.hpp  registry.hpp  riemann_2d.hpp  sedov_blast.hpp  sod.hpp
euler/euler/schemes/: flux.hpp  hll.hpp  hllc.hpp  rusanov.hpp
practical_session/: 00-setup.md  01-first-step.md  02-naive-burgers.md  03-flux-burgers.md  04-euler-1.md  04-euler-2.md  04-euler.md  05-conclusion.md  start_instructions.md
practical_session/figures/: create_dmr_setup.py  create_flux_conservation_diagram.py  create_riemann2d_config3_setup.py
practical_session/material/00-setup/: CMakeLists.txt  main.cpp
practical_session/material/00-setup/outputs/: 1d_example.xdmf  2d_example.xdmf  example_1d.h5  example_1d.xdmf  example_2d.h5  example_2d.xdmf
practical_session/material/01-first-step/: CMakeLists.txt  main.cpp
practical_session/material/01-first-step/solution/: main_1d.cpp  main_2d.cpp
practical_session/material/02-naive-burgers/: CMakeLists.txt  main.cpp
practical_session/material/02-naive-burgers/solution/: CMakeLists.txt  (+1 more)
practical_session/material/03-flux-burgers/: CMakeLists.txt  main.cpp
practical_session/material/03-flux-burgers/solution/: CMakeLists.txt  main_1d.cpp  main_2d.cpp  main_viscous_2d.cpp
practical_session/material/03-flux/solution/: CMakeLists.txt  main.cpp  main_2d.cpp  main_viscous_2d.cpp  main_viscous_vector_2d.cpp
practical_session/material/04-euler/: CMakeLists.txt  main.cpp
(+17 files in other folders)
